# Mega_calc

./: .gitignore  CMakeLists.txt  Mega_calc.qmlproject  Mega_calc.qmlproject.qtds  Mega_calc.qmlproject.qtds.5a489d2  Mega_calc.qmlproject.qtds.e670319  README.md  main.cpp  qmlmodules
.github/workflows/: main.yml
app/Qt/labs/lottieqt/: plugins.qmltypes
app/Qt/test/controls/: QuickControlsTestUtilsPrivate.qmltypes
app/translations/: qt_ja.qm
content/: App.qml  CMakeLists.txt  Calc_page.ui.qml  Matrix_page.ui.qml  MyBS.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/Mega_calc/: CMakeLists.txt  Constants.qml  qmldir
imports/Mega_calc/designer/: plugin.metainfo
installer/: setup.iss  user agreement.txt
src/: main.cpp
src/classes/LongComplex/: LongComplex.cpp  LongComplex.h
src/classes/LongNumber/: LongNimber.cpp  LongNimber.h  LongNumber.cpp  LongNumber.h
src/classes/LongNumber/cringe class/: cringe.h
src/classes/Mat2D/: Mat2D.cpp  Mat2D.h  Mat2D_LC.cpp  Mat2D_LC.h  Mat2D_LN.cpp  Mat2D_LN.h
src/classes/Parser/: Parser.cpp  Parser.h
src/classes/Solver/: Solver.cpp  Solver.h
src/classes/VecND/: VecND.cpp  VecND.h  VecND_LC.cpp  VecND_LC.h  VecND_LN.cpp  VecND_LN.h
src/ui files/: Core.cpp  Core.h  ui.cpp  ui.h
src/ui files/Core/: Core.cpp  Core.h
src/ui files/Headers/: import_qml_plugins.h
src/ui files/Ui/: ui.cpp  ui.h
